--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,10 @@
 site_name: CDK Docs
 
+theme:
+  name: mkdocs
+  color_mode: auto
+  user_color_mode_toggle: true
+
 nav:
   - About CDK: index.md
   - Mint:
