--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,10 +4,12 @@ theme:
   name: mkdocs
   color_mode: auto
   user_color_mode_toggle: true
+  highlightjs: true
 
 nav:
   - About CDK: index.md
   - Wallet:
       - Intro: wallet/intro.md
+      - CLI: wallet/cli.md
   - Mint:
     - Intro: mint/intro.md
