--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,21 @@
 site_name: CDK Docs
 
 theme:
-  name: mkdocs
-  color_mode: auto
-  user_color_mode_toggle: true
-  highlightjs: true
+  name: material
+  palette:
+    - toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+  features:
+    - navigation.footer
+
+markdown_extensions:
+  - pymdownx.superfences
+  - pymdownx.snippets
 
 nav:
   - About CDK: index.md
