--- a/snippets/wallet/Cargo.toml
+++ b/snippets/wallet/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+bip39 = { version = "2.0", features = ["rand"] }
 # --8<-- [start:cdk-deps]
 cdk = { version = "0.6.0", features = ["wallet"] }
 cdk-sqlite = { version = "0.6.0", features = ["wallet"] }
 # --8<-- [end:cdk-deps]
-rand = { version = "0.8", default-features = false }
-tokio = { version = "1", default-features = false }
