--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,13 +30,8 @@ nav:
       - Get Balances: wallet/core/02_get_balances.md
       - Receive Payments: wallet/core/03_receive_payments.md
       - Send Payments: wallet/core/04_send_payments.md
-    - Optional:
-      - Optional Operations: wallet/optional/00_intro.md
-      - Spending Conditions: wallet/optional/01_spending_conditions.md
-      - Payment Requests: wallet/optional/01_payment_requests.md
-      - Restore from Mnemonic: wallet/optional/02_restore_from_mnemonic.md
     - Appendix:
-      - CLI: wallet/xx_appendix_cli.md
+      - CLI: wallet/02_appendix_cli.md
   - Mint:
     - Intro: mint/00_intro.md
     - Container (with LND): mint/01_container_with_lnd.md
